kubernetes/plex/plex.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  selector:
    app: plex
  ports:
  - name: plex-web
    protocol: TCP
    port: 32400
    targetPort: 32400

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker:plexpass
        imagePullPolicy: Always
        ports:
        - containerPort: 32400
          name: plex-web
        - containerPort: 32410
          protocol: UDP
          hostPort: 32410
          name: gdm0
        - containerPort: 32412
          protocol: UDP
          hostPort: 32412
          name: gdm2
        - containerPort: 32413
          protocol: UDP
          hostPort: 32413
          name: gdm3
        - containerPort: 32414
          protocol: UDP
          hostPort: 32414
          name: gdm4
        volumeMounts:
        - name: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: media
          mountPath: /data
      volumes:
      - name: config
        hostPath:
          path: /home/zzyzxd/plex/config
      - name: transcode
        # TODO: Buy a hube memory stick, and mount a tmpfs for transcoding
        hostPath:
          path: /home/zzyzxd/plex/transcode
      - name: media
        persistentVolumeClaim:
          claimName: media
