kubernetes/plex/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  clusterIP: None
  ports:
  - name: plex-web
    protocol: TCP
    port: 32400
    targetPort: 32400

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
spec:
  replicas: 1
  serviceName: plex
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: plex
        image: plexinc/pms-docker
        imagePullPolicy: Always
        ports:
        - containerPort: 32400
          name: plex-web
        volumeMounts:
        - name: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: media
          mountPath: /media
      volumes:
      - name: transcode
        emptyDir: {}
      - name: config
        hostPath:
          path: /var/opt/plex
          type: DirectoryOrCreate
      - name: media
        persistentVolumeClaim:
          claimName: media
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "nfs-qnap"
      resources:
        requests:
          storage: 1Gi
