kubernetes/plex/networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex
  # ingress from ingress controllers
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: envoy
        app.kubernetes.io/component: proxy
        io.kubernetes.pod.namespace: envoy-gateway-system
  egress:
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  # it's hard to make a definitive whitelist since plex uses a lot of 3rd party services.
  # But at least let's block it from accessing local networks.
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
    toPorts:
    - ports:
      - port: "443"
